@@ -26,6 +26,10 @@
 | Fix trigger create --filter flag to be optional
 | https://github.com/knative/client/pull/745[#745]
 
+| 🐛
+| Fix plugin execution for Windows.
+| https://github.com/knative/client/pull/738[#738]
+
 ## v0.13.0 (2020-03-11)
 
 [cols="1,10,3", options="header", width="100%"]
